k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
  namespace: wisecow
  labels:
    app: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: suhaandocker/wisecow:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4499
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            tcpSocket:
              port: 4499
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 4499
            initialDelaySeconds: 10
            periodSeconds: 20
